# P10BackEnd

./: .env_exemplo  .gitignore  .pdm.toml  P10_bkp.json  P1O.json  P1Odump.json  Procfile  db.sqlite3  pyproject.toml  requirements.txt
P10/: admin.py  apps.py  models.py
P10/migrations/: 0001_initial.py  0002_compra.py  0002_initial.py  0002_rename_nome_produtos_nome_produtos_capa.py  0002_tag.py  0003_alter_produtos_data.py  0003_alter_produtos_desconto.py  0003_categoria_materialcommunityicons.py  0003_fornecedor.py  0003_remove_produtos_tags_produtos_tag.py  0004_alter_descontos_porcentagem_alter_produtos_desconto_and_more.py  0004_alter_fornecedor_cnpj_alter_fornecedor_email_and_more.py  0004_produtos_tags.py  0005_alter_fornecedor_telefone.py  0005_alter_produtos_desconto_alter_produtos_sazonal.py  0005_subcategoria_delete_cliente_produtos_subcategoria.py  0006_alter_descontos_options_alter_produtos_options.py  0006_alter_fornecedor_telefone.py  0006_remove_produtos_tags_produtos_tags.py  0007_alter_fornecedor_cnpj.py  0007_sazonal.py  0008_alter_sazonal_options_and_more.py  0008_categoria.py  0009_descontos.py  0009_remove_produtos_subcategoria_produtos_sazonal.py  0010_alter_fornecedor_options_alter_produtos_fornecedor.py  0010_subcategoria_categoria_alter_produtos_desconto.py  0011_remove_produtos_capa_produtos_imagem.py  0011_rename_preço_produtos_preco.py  0012_itenscompra_preco_item.py  0012_produtos_categoria.py
P10/models/: __init__.py  categoria.py  cliente.py  compra.py  desconto.py  tag.py  (+6 more)
config/: settings.py  urls.py
usuario/: admin.py  models.py
(+24 files in other folders)
