[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "django>=4.2.4",
    "djangorestframework>=3.14.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "setuptools>=68.0.0",
    "drf-spectacular>=0.26.4",
    "django-cors-headers>=4.2.0",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
    "djangorestframework-simplejwt>=5.3.0",
    "gunicorn>=21.2.0",
    "django-filter>=23.2",
    "python-dotenv>=1.0.0",
    "whitenoise[brotli]>=6.5.0",
    "django-taggit>=4.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"
